--- a/diseño.css
+++ b/diseño.css
@@ -39,3 +39,24 @@ body{
     width: 100%;
     height: 210px;
 }
+
+.card .contenido{
+    padding: 15px;
+    text-align: center;
+}
+
+.card.contenido p{
+    line-height: 1.3;
+    color: #6a6a6a;
+}
+
+.card .contenido h3{
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.card.contenido a{
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+}
