--- a/diseño.css
+++ b/diseño.css
@@ -40,6 +40,10 @@ body{
     height: 210px;
 }
 
+.card img:hover{
+    filter: blur(1px);
+}
+
 .card .contenido{
     padding: 15px;
     text-align: center;
@@ -55,11 +59,12 @@ body{
     margin-bottom: 15px;
 }
 
-<<<<<<< HEAD
 .card.contenido a{
+    text-decoration: none;
     display: inline-block;
     padding: 10px;
     margin-top: 10px;
     color: rgb(87, 87, 87);
 }
+
 
