--- a/diseño.css
+++ b/diseño.css
@@ -10,11 +10,11 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    background: #EBE2C5;
 }
 
 .container{
-    width: 100%;
+    width: 450px;
     display: flex;
     max-width: 1100px;
 }
@@ -35,9 +35,12 @@ body{
     transform: translateY(-3%);
 }
 
+
 .card img{
     width: 100%;
     height: 210px;
+    justify-content: center;
+    align-items: center;
 }
 
 .card img:hover{
@@ -52,6 +55,7 @@ body{
 .card.contenido p{
     line-height: 1.3;
     color: #6a6a6a;
+    margin: 1px;
 }
 
 .card .contenido h3{
@@ -59,12 +63,19 @@ body{
     margin-bottom: 15px;
 }
 
-.card.contenido a{
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px;
-    margin-top: 10px;
-    color: rgb(87, 87, 87);
+.card.contenido h4{
+    font-weight: 200;
+    margin-bottom: 10px;
+}
+.card .contenido a{
+    margin-bottom: 5px;
+    padding: 5px;
+    font-size: 25px;
+    color: #303C6A;
+}
+
+.card .contenido a:hover{
+    color: #6F8BF7;
 }
 
 
